gcc/testsuite/rust/rustc/ui/pub/pub-restricted-error_dg.rs
struct Bar(pub(()));

struct Foo {
    pub(crate) () foo: usize, // { dg-error "" "" { target *-*-* } }
}

fn main() {}

